<resources>
    <string name="app_name">PreferenceFragmentExample</string>

    <string name="setting_section_notification">Notification</string>
    <string name="setting_section_others">Others</string>
    <string name="setting_section_notify_summary">Actions when received a notification</string>
    <string name="setting_section_other_summary">Other settings and version</string>
    <string name="setting_show_notification">Show notification</string>
    <string name="setting_vibration">Vibration</string>
    <string name="setting_ringtone">Ringtone</string>
    <string name="setting_clear_data">Clear data</string>
    <string name="setting_about">About</string>
    <string name="setting_title">Settings</string>

    <string name="key_show_notification">key_show_notification</string>
    <string name="key_turn_on_vibration">key_turn_on_vibration</string>
    <string name="key_clear_data">key_clear_data</string>
    <string name="key_about">key_about</string>
</resources>
